# pg-schema-diff

./: .gitignore  .licensure.yml  Cargo.toml  LICENSE
src/: main.rs  schema_set.rs
src/nodes/: a_arrayexpr.rs  a_const.rs  a_expr.rs  a_indicies.rs  a_indirection.rs  a_star.rs  access_priv.rs  alias.rs  alter_collation_stmt.rs  alter_function_stmt.rs  alter_object_schema_stmt.rs  alter_owner_stmt.rs  alter_table_cmd.rs  alter_table_stmt.rs  alter_type_stmt.rs  bool_expr.rs  boolean_test.rs  case_expr.rs  case_when.rs  cluster_stmt.rs  cmd_type.rs  coalesce_expr.rs  coercion_context.rs  collate_clause.rs  column_def.rs  column_ref.rs  comment_stmt.rs  common_table_expr.rs  composite_type_stmt.rs  constraint.rs  copy_stmt.rs  create_am_stmt.rs  create_cast_stmt.rs  create_conversion_stmt.rs  create_domain_stmt.rs  create_enum_stmt.rs  create_event_trig_stmt.rs  create_fdw_stmt.rs  create_foreign_server_stmt.rs  create_foreign_table_stmt.rs  (+81 more)
