[package]
name = "pg-schema-diff"
version = "0.1.0"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-parser = "0.0.8"
#postgres-parser = { path = "../postgres-parser" }